menu collapse ouside fixed

--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -131,7 +131,7 @@
   .user {
     width: 10%;
   }
-  .collapsing{
+  .collapsed_cus{
     height: 0;
     overflow: hidden;
     animation: collapsed_cus 0.35s;
